syntax = "proto3";

package share;

import "common.proto";
import "scan.proto";

message ScanImageRequest {
    string Registry = 1;
    string Username = 2;
    string Password = 3;
    string Repository = 4;
    string Tag = 5;
    string Proxy = 6;
    bool ScanLayers = 7;
    bool ScanSecrets = 8;
    string BaseImage = 9;
}

service ScannerService {
  rpc ScanRunning(ScanRunningRequest) returns (ScanResult);
  rpc ScanImageData(ScanData) returns (ScanResult);
  rpc ScanImage(ScanImageRequest) returns (ScanResult);
  rpc ScanAppPackage(ScanAppRequest) returns (ScanResult);
  rpc Ping(RPCVoid) returns (RPCVoid);
  rpc ScanAwsLambda(ScanAwsLambdaRequest) returns (ScanResult);
}
